# dirsearch

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTORS.md  Dockerfile  README.md  TODO.md  __init__.py  config.ini  dirsearch.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  testing.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  docker-image.yml  nuitka-linux.yml  nuitka-macos-intel.yml  nuitka-macos-silicon.yml  nuitka-release-draft.yml  nuitka-windows.yml  portable-builds.yml  pyinstaller-linux.yml  pyinstaller-macos-intel.yml  pyinstaller-macos-silicon.yml  pyinstaller-release-draft.yml  pyinstaller-windows.yml
benchmarks/phase5/: README.md
db/categories/: generate_wpscan_wordlists.py
db/templates/: admin.txt  api.txt  auth.txt  backups.txt  crud.txt  db.txt  logs.txt
docs/: building.md  configuration.md  index.md  installation.md  native-backend-benchmarks.md  options.md  python-api.md  references.md  release-notes-v0.5.0.md  sessions.md  usage.md  wordlists.md
native/: Cargo.toml  README.md  pyproject.toml
native/src/: lib.rs
pyinstaller/: README.md  build.sh  dirsearch.spec
requirements/: db.txt  runtime.txt
scripts/: benchmark_local_contention.py  benchmark_phase5.py  benchmark_vulnweb_phase5.py  build_native.py  build_portable.py  configure_stack.py  run_phase5_do_benchmark.sh  run_phase5_do_split_matrix.sh  split_wordlists.py
tests/: check_packaged_install.py  test_native_install_packaging.py  test_optional_db_dependencies.py  test_release_scripts.py  test_report_exception_handling.py
(+71 files in other folders)
