[package]
name = "dirsearch_native"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[lib]
name = "dirsearch_native"
crate-type = ["cdylib"]

[dependencies]
indexmap = "2.7"
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py313"] }
rayon = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
regex = "1.11"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
